# DeliveryBoy

./: .env.example  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: ci.yaml
db/: delivery_boy.db
db/migrations/: 20230517221824_create_initial_feed_entry_table.sql
prisma/: schema.prisma
src/: index.ts  main.rs
src/utils/: Logger.ts
